--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Weather Dashboard</title>
+    <title>Install DNS</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="dashboard">
-        <h1>Weather Dashboard</h1>
-        <input type="text" id="cityInput" placeholder="Enter city name">
-        <button onclick="getWeather()">Get Weather</button>
-        <div id="weatherResult"></div>
+    <div class="container">
+        <h1>Install DNS Profile</h1>
+        <p>Click the button below to install the DNS configuration profile on your device.</p>
+        <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig" class="install-btn">
+            Install DNS
+        </a>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
