--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Install DNS Profile</h1>
-        <p>Click the button below to install the DNS configuration profile on your device.</p>
+        <h1>Step 1. Install DNS Profile</h1>
+        <p>Install this DNS.</p>
         <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig" class="install-btn">
             Install DNS
         </a>
