--- a/index.html
+++ b/index.html
@@ -2,16 +2,74 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Install DNS</title>
+    <title>Install DNS & Certs</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Step 1. Install DNS Profile</h1>
-        <p>Install this DNS.</p>
+        <h1>Install DNS Profile</h1>
+        <p>Click the button below to install the DNS configuration profile on your device.</p>
         <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig" class="install-btn">
             Install DNS
         </a>
+    </div>
+
+    <div class="container cert-list">
+        <h2>Install Certificates</h2>
+        <ul>
+            <li>
+                <span>Cert 1</span>
+                <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig" class="install-btn small">Install</a>
+            </li>
+            <li>
+                <span>Cert 2</span>
+                <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig" class="install-btn small">Install</a>
+            </li>
+            <li>
+                <span>Cert 3</span>
+                <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig" class="install-btn small">Install</a>
+            </li>
+            <li>
+                <span>Cert 4</span>
+                <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig" class="install-btn small">Install</a>
+            </li>
+            <li>
+                <span>Cert 5</span>
+                <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig" class="install-btn small">Install</a>
+            </li>
+            <li>
+                <span>Cert 6</span>
+                <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig" class="install-btn small">Install</a>
+            </li>
+            <li>
+                <span>Cert 7</span>
+                <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig" class="install-btn small">Install</a>
+            </li>
+            <li>
+                <span>Cert 8</span>
+                <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig" class="install-btn small">Install</a>
+            </li>
+            <li>
+                <span>Cert 9</span>
+                <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig" class="install-btn small">Install</a>
+            </li>
+            <li>
+                <span>Cert 10</span>
+                <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig" class="install-btn small">Install</a>
+            </li>
+            <li>
+                <span>Cert 11</span>
+                <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig" class="install-btn small">Install</a>
+            </li>
+            <li>
+                <span>Cert 12</span>
+                <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig" class="install-btn small">Install</a>
+            </li>
+            <li>
+                <span>Cert 13</span>
+                <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig" class="install-btn small">Install</a>
+            </li>
+        </ul>
     </div>
 </body>
 </html>
