--- a/index.html
+++ b/index.html
@@ -19,55 +19,55 @@
         <ul>
             <li>
                 <span>Cert 1</span>
-                <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig" class="install-btn small">Install</a>
+                <a href="https://loadly.io/PGwC04B6#google_vignette" class="install-btn small">Install</a>
             </li>
             <li>
                 <span>Cert 2</span>
-                <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig" class="install-btn small">Install</a>
+                <a href="https://loadly.io/g0FwZsy3" class="install-btn small">Install</a>
             </li>
             <li>
                 <span>Cert 3</span>
-                <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig" class="install-btn small">Install</a>
+                <a href="https://loadly.io/KDxT6fCO" class="install-btn small">Install</a>
             </li>
             <li>
                 <span>Cert 4</span>
-                <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig" class="install-btn small">Install</a>
+                <a href="https://loadly.io/vnjes8ios" class="install-btn small">Install</a>
             </li>
             <li>
                 <span>Cert 5</span>
-                <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig" class="install-btn small">Install</a>
+                <a href="https://loadly.io/sCxKfNji" class="install-btn small">Install</a>
             </li>
             <li>
                 <span>Cert 6</span>
-                <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig" class="install-btn small">Install</a>
+                <a href="https://loadly.io/NRqDTAah" class="install-btn small">Install</a>
             </li>
             <li>
                 <span>Cert 7</span>
-                <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig" class="install-btn small">Install</a>
+                <a href="https://loadly.io/8FnyqEjs" class="install-btn small">Install</a>
             </li>
             <li>
                 <span>Cert 8</span>
-                <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig" class="install-btn small">Install</a>
+                <a href="https://loadly.io/ZQgRwTtA" class="install-btn small">Install</a>
             </li>
             <li>
                 <span>Cert 9</span>
-                <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig" class="install-btn small">Install</a>
+                <a href="https://loadly.io/TM5Ye1O1" class="install-btn small">Install</a>
             </li>
             <li>
                 <span>Cert 10</span>
-                <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig" class="install-btn small">Install</a>
+                <a href="https://loadly.io/Rod6cWdW" class="install-btn small">Install</a>
             </li>
             <li>
                 <span>Cert 11</span>
-                <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig" class="install-btn small">Install</a>
+                <a href="https://loadly.io/pokXH5G4" class="install-btn small">Install</a>
             </li>
             <li>
                 <span>Cert 12</span>
-                <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig" class="install-btn small">Install</a>
+                <a href="https://loadly.io/zBXxhRoc" class="install-btn small">Install</a>
             </li>
             <li>
                 <span>Cert 13</span>
-                <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig" class="install-btn small">Install</a>
+                <a href="https://loadly.io/55ZWv8OZ" class="install-btn small">Install</a>
             </li>
         </ul>
     </div>
