--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <div class="container">
         <h1>Install DNS Profile</h1>
         <p>Click the button below to install the DNS configuration profile on your device.</p>
-        <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig" class="install-btn">
+        <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
+           class="install-btn"
+           target="_blank"
+           rel="noopener">
             Install DNS
         </a>
     </div>
@@ -19,55 +22,133 @@
         <ul>
             <li>
                 <span>Cert 1</span>
-                <a href="https://loadly.io/PGwC04B6#google_vignette" class="install-btn small">Install</a>
+                <div class="cert-btn-row">
+                  <a href="https://example.com/cert1.mobileconfig" class="install-btn small">Install Cert</a>
+                  <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
+                     class="install-btn small"
+                     target="_blank"
+                     rel="noopener">Install</a>
+                </div>
             </li>
             <li>
                 <span>Cert 2</span>
-                <a href="https://loadly.io/g0FwZsy3" class="install-btn small">Install</a>
+                <div class="cert-btn-row">
+                  <a href="https://example.com/cert2.mobileconfig" class="install-btn small">Install Cert</a>
+                  <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
+                     class="install-btn small"
+                     target="_blank"
+                     rel="noopener">Install</a>
+                </div>
             </li>
             <li>
                 <span>Cert 3</span>
-                <a href="https://loadly.io/KDxT6fCO" class="install-btn small">Install</a>
+                <div class="cert-btn-row">
+                  <a href="https://example.com/cert3.mobileconfig" class="install-btn small">Install Cert</a>
+                  <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
+                     class="install-btn small"
+                     target="_blank"
+                     rel="noopener">Install</a>
+                </div>
             </li>
             <li>
                 <span>Cert 4</span>
-                <a href="https://loadly.io/vnjes8ios" class="install-btn small">Install</a>
+                <div class="cert-btn-row">
+                  <a href="https://example.com/cert4.mobileconfig" class="install-btn small">Install Cert</a>
+                  <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
+                     class="install-btn small"
+                     target="_blank"
+                     rel="noopener">Install</a>
+                </div>
             </li>
             <li>
                 <span>Cert 5</span>
-                <a href="https://loadly.io/sCxKfNji" class="install-btn small">Install</a>
+                <div class="cert-btn-row">
+                  <a href="https://example.com/cert5.mobileconfig" class="install-btn small">Install Cert</a>
+                  <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
+                     class="install-btn small"
+                     target="_blank"
+                     rel="noopener">Install</a>
+                </div>
             </li>
             <li>
                 <span>Cert 6</span>
-                <a href="https://loadly.io/NRqDTAah" class="install-btn small">Install</a>
+                <div class="cert-btn-row">
+                  <a href="https://example.com/cert6.mobileconfig" class="install-btn small">Install Cert</a>
+                  <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
+                     class="install-btn small"
+                     target="_blank"
+                     rel="noopener">Install</a>
+                </div>
             </li>
             <li>
                 <span>Cert 7</span>
-                <a href="https://loadly.io/8FnyqEjs" class="install-btn small">Install</a>
+                <div class="cert-btn-row">
+                  <a href="https://example.com/cert7.mobileconfig" class="install-btn small">Install Cert</a>
+                  <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
+                     class="install-btn small"
+                     target="_blank"
+                     rel="noopener">Install</a>
+                </div>
             </li>
             <li>
                 <span>Cert 8</span>
-                <a href="https://loadly.io/ZQgRwTtA" class="install-btn small">Install</a>
+                <div class="cert-btn-row">
+                  <a href="https://example.com/cert8.mobileconfig" class="install-btn small">Install Cert</a>
+                  <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
+                     class="install-btn small"
+                     target="_blank"
+                     rel="noopener">Install</a>
+                </div>
             </li>
             <li>
                 <span>Cert 9</span>
-                <a href="https://loadly.io/TM5Ye1O1" class="install-btn small">Install</a>
+                <div class="cert-btn-row">
+                  <a href="https://example.com/cert9.mobileconfig" class="install-btn small">Install Cert</a>
+                  <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
+                     class="install-btn small"
+                     target="_blank"
+                     rel="noopener">Install</a>
+                </div>
             </li>
             <li>
                 <span>Cert 10</span>
-                <a href="https://loadly.io/Rod6cWdW" class="install-btn small">Install</a>
+                <div class="cert-btn-row">
+                  <a href="https://example.com/cert10.mobileconfig" class="install-btn small">Install Cert</a>
+                  <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
+                     class="install-btn small"
+                     target="_blank"
+                     rel="noopener">Install</a>
+                </div>
             </li>
             <li>
                 <span>Cert 11</span>
-                <a href="https://loadly.io/pokXH5G4" class="install-btn small">Install</a>
+                <div class="cert-btn-row">
+                  <a href="https://example.com/cert11.mobileconfig" class="install-btn small">Install Cert</a>
+                  <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
+                     class="install-btn small"
+                     target="_blank"
+                     rel="noopener">Install</a>
+                </div>
             </li>
             <li>
                 <span>Cert 12</span>
-                <a href="https://loadly.io/zBXxhRoc" class="install-btn small">Install</a>
+                <div class="cert-btn-row">
+                  <a href="https://example.com/cert12.mobileconfig" class="install-btn small">Install Cert</a>
+                  <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
+                     class="install-btn small"
+                     target="_blank"
+                     rel="noopener">Install</a>
+                </div>
             </li>
             <li>
                 <span>Cert 13</span>
-                <a href="https://loadly.io/55ZWv8OZ" class="install-btn small">Install</a>
+                <div class="cert-btn-row">
+                  <a href="https://example.com/cert13.mobileconfig" class="install-btn small">Install Cert</a>
+                  <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
+                     class="install-btn small"
+                     target="_blank"
+                     rel="noopener">Install</a>
+                </div>
             </li>
         </ul>
     </div>
