--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li>
                 <span>Cert 1</span>
                 <div class="cert-btn-row">
-                  <a href="https://example.com/cert1.mobileconfig" class="install-btn small">Install Cert</a>
+                  <a href="https://example.com/cert1.mobileconfig" class="install-btn small" target="_blank" rel="noopener">Install Cert</a>
                   <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
                      class="install-btn small"
                      target="_blank"
@@ -33,7 +33,7 @@
             <li>
                 <span>Cert 2</span>
                 <div class="cert-btn-row">
-                  <a href="https://example.com/cert2.mobileconfig" class="install-btn small">Install Cert</a>
+                  <a href="https://example.com/cert2.mobileconfig" class="install-btn small" target="_blank" rel="noopener">Install Cert</a>
                   <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
                      class="install-btn small"
                      target="_blank"
@@ -43,7 +43,7 @@
             <li>
                 <span>Cert 3</span>
                 <div class="cert-btn-row">
-                  <a href="https://example.com/cert3.mobileconfig" class="install-btn small">Install Cert</a>
+                  <a href="https://example.com/cert3.mobileconfig" class="install-btn small" target="_blank" rel="noopener">Install Cert</a>
                   <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
                      class="install-btn small"
                      target="_blank"
@@ -53,7 +53,7 @@
             <li>
                 <span>Cert 4</span>
                 <div class="cert-btn-row">
-                  <a href="https://example.com/cert4.mobileconfig" class="install-btn small">Install Cert</a>
+                  <a href="https://example.com/cert4.mobileconfig" class="install-btn small" target="_blank" rel="noopener">Install Cert</a>
                   <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
                      class="install-btn small"
                      target="_blank"
@@ -63,7 +63,7 @@
             <li>
                 <span>Cert 5</span>
                 <div class="cert-btn-row">
-                  <a href="https://example.com/cert5.mobileconfig" class="install-btn small">Install Cert</a>
+                  <a href="https://example.com/cert5.mobileconfig" class="install-btn small" target="_blank" rel="noopener">Install Cert</a>
                   <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
                      class="install-btn small"
                      target="_blank"
@@ -73,7 +73,7 @@
             <li>
                 <span>Cert 6</span>
                 <div class="cert-btn-row">
-                  <a href="https://example.com/cert6.mobileconfig" class="install-btn small">Install Cert</a>
+                  <a href="https://example.com/cert6.mobileconfig" class="install-btn small" target="_blank" rel="noopener">Install Cert</a>
                   <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
                      class="install-btn small"
                      target="_blank"
@@ -83,7 +83,7 @@
             <li>
                 <span>Cert 7</span>
                 <div class="cert-btn-row">
-                  <a href="https://example.com/cert7.mobileconfig" class="install-btn small">Install Cert</a>
+                  <a href="https://example.com/cert7.mobileconfig" class="install-btn small" target="_blank" rel="noopener">Install Cert</a>
                   <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
                      class="install-btn small"
                      target="_blank"
@@ -93,7 +93,7 @@
             <li>
                 <span>Cert 8</span>
                 <div class="cert-btn-row">
-                  <a href="https://example.com/cert8.mobileconfig" class="install-btn small">Install Cert</a>
+                  <a href="https://example.com/cert8.mobileconfig" class="install-btn small" target="_blank" rel="noopener">Install Cert</a>
                   <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
                      class="install-btn small"
                      target="_blank"
@@ -103,7 +103,7 @@
             <li>
                 <span>Cert 9</span>
                 <div class="cert-btn-row">
-                  <a href="https://example.com/cert9.mobileconfig" class="install-btn small">Install Cert</a>
+                  <a href="https://example.com/cert9.mobileconfig" class="install-btn small" target="_blank" rel="noopener">Install Cert</a>
                   <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
                      class="install-btn small"
                      target="_blank"
@@ -113,7 +113,7 @@
             <li>
                 <span>Cert 10</span>
                 <div class="cert-btn-row">
-                  <a href="https://example.com/cert10.mobileconfig" class="install-btn small">Install Cert</a>
+                  <a href="https://example.com/cert10.mobileconfig" class="install-btn small" target="_blank" rel="noopener">Install Cert</a>
                   <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
                      class="install-btn small"
                      target="_blank"
@@ -123,7 +123,7 @@
             <li>
                 <span>Cert 11</span>
                 <div class="cert-btn-row">
-                  <a href="https://example.com/cert11.mobileconfig" class="install-btn small">Install Cert</a>
+                  <a href="https://example.com/cert11.mobileconfig" class="install-btn small" target="_blank" rel="noopener">Install Cert</a>
                   <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
                      class="install-btn small"
                      target="_blank"
@@ -133,7 +133,7 @@
             <li>
                 <span>Cert 12</span>
                 <div class="cert-btn-row">
-                  <a href="https://example.com/cert12.mobileconfig" class="install-btn small">Install Cert</a>
+                  <a href="https://example.com/cert12.mobileconfig" class="install-btn small" target="_blank" rel="noopener">Install Cert</a>
                   <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
                      class="install-btn small"
                      target="_blank"
@@ -143,7 +143,7 @@
             <li>
                 <span>Cert 13</span>
                 <div class="cert-btn-row">
-                  <a href="https://example.com/cert13.mobileconfig" class="install-btn small">Install Cert</a>
+                  <a href="https://example.com/cert13.mobileconfig" class="install-btn small" target="_blank" rel="noopener">Install Cert</a>
                   <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
                      class="install-btn small"
                      target="_blank"
