--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <span>Cert 1</span>
                 <div class="cert-btn-row">
                   <a href="https://example.com/cert1.mobileconfig" class="install-btn small" target="_blank" rel="noopener">Install Cert</a>
-                  <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
+                  <a href="https://loadly.io/PGwC04B6"
                      class="install-btn small"
                      target="_blank"
                      rel="noopener">Install</a>
@@ -34,7 +34,7 @@
                 <span>Cert 2</span>
                 <div class="cert-btn-row">
                   <a href="https://example.com/cert2.mobileconfig" class="install-btn small" target="_blank" rel="noopener">Install Cert</a>
-                  <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
+                  <a href="https://loadly.io/g0FwZsy3"
                      class="install-btn small"
                      target="_blank"
                      rel="noopener">Install</a>
@@ -44,7 +44,7 @@
                 <span>Cert 3</span>
                 <div class="cert-btn-row">
                   <a href="https://example.com/cert3.mobileconfig" class="install-btn small" target="_blank" rel="noopener">Install Cert</a>
-                  <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
+                  <a href="https://loadly.io/KDxT6fCO#google_vignette"
                      class="install-btn small"
                      target="_blank"
                      rel="noopener">Install</a>
@@ -54,7 +54,7 @@
                 <span>Cert 4</span>
                 <div class="cert-btn-row">
                   <a href="https://example.com/cert4.mobileconfig" class="install-btn small" target="_blank" rel="noopener">Install Cert</a>
-                  <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
+                  <a href="https://loadly.io/vnjes8ios"
                      class="install-btn small"
                      target="_blank"
                      rel="noopener">Install</a>
@@ -64,7 +64,7 @@
                 <span>Cert 5</span>
                 <div class="cert-btn-row">
                   <a href="https://example.com/cert5.mobileconfig" class="install-btn small" target="_blank" rel="noopener">Install Cert</a>
-                  <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
+                  <a href="https://loadly.io/sCxKfNji"
                      class="install-btn small"
                      target="_blank"
                      rel="noopener">Install</a>
@@ -74,7 +74,7 @@
                 <span>Cert 6</span>
                 <div class="cert-btn-row">
                   <a href="https://example.com/cert6.mobileconfig" class="install-btn small" target="_blank" rel="noopener">Install Cert</a>
-                  <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
+                  <a href="https://loadly.io/NRqDTAah"
                      class="install-btn small"
                      target="_blank"
                      rel="noopener">Install</a>
@@ -84,7 +84,7 @@
                 <span>Cert 7</span>
                 <div class="cert-btn-row">
                   <a href="https://example.com/cert7.mobileconfig" class="install-btn small" target="_blank" rel="noopener">Install Cert</a>
-                  <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
+                  <a href="https://loadly.io/8FnyqEjs"
                      class="install-btn small"
                      target="_blank"
                      rel="noopener">Install</a>
@@ -94,7 +94,7 @@
                 <span>Cert 8</span>
                 <div class="cert-btn-row">
                   <a href="https://example.com/cert8.mobileconfig" class="install-btn small" target="_blank" rel="noopener">Install Cert</a>
-                  <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
+                  <a href="https://loadly.io/ZQgRwTtA"
                      class="install-btn small"
                      target="_blank"
                      rel="noopener">Install</a>
@@ -104,7 +104,7 @@
                 <span>Cert 9</span>
                 <div class="cert-btn-row">
                   <a href="https://example.com/cert9.mobileconfig" class="install-btn small" target="_blank" rel="noopener">Install Cert</a>
-                  <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
+                  <a href="https://loadly.io/TM5Ye1O1"
                      class="install-btn small"
                      target="_blank"
                      rel="noopener">Install</a>
@@ -114,7 +114,7 @@
                 <span>Cert 10</span>
                 <div class="cert-btn-row">
                   <a href="https://example.com/cert10.mobileconfig" class="install-btn small" target="_blank" rel="noopener">Install Cert</a>
-                  <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
+                  <a href="https://loadly.io/Rod6cWdW"
                      class="install-btn small"
                      target="_blank"
                      rel="noopener">Install</a>
@@ -124,7 +124,7 @@
                 <span>Cert 11</span>
                 <div class="cert-btn-row">
                   <a href="https://example.com/cert11.mobileconfig" class="install-btn small" target="_blank" rel="noopener">Install Cert</a>
-                  <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
+                  <a href="https://loadly.io/pokXH5G4"
                      class="install-btn small"
                      target="_blank"
                      rel="noopener">Install</a>
@@ -134,7 +134,7 @@
                 <span>Cert 12</span>
                 <div class="cert-btn-row">
                   <a href="https://example.com/cert12.mobileconfig" class="install-btn small" target="_blank" rel="noopener">Install Cert</a>
-                  <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
+                  <a href="https://loadly.io/zBXxhRoc"
                      class="install-btn small"
                      target="_blank"
                      rel="noopener">Install</a>
@@ -144,7 +144,7 @@
                 <span>Cert 13</span>
                 <div class="cert-btn-row">
                   <a href="https://example.com/cert13.mobileconfig" class="install-btn small" target="_blank" rel="noopener">Install Cert</a>
-                  <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
+                  <a href="https://loadly.io/55ZWv8OZ"
                      class="install-btn small"
                      target="_blank"
                      rel="noopener">Install</a>
