Update HTML structure and text content

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <title>Install DNS & Certs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- iOS style font -->
+    <link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container glass">
         <h1>Install DNS Profile</h1>
-        <p>Click the button below to install the DNS configuration profile on your device.</p>
+        <p>Tap below to install the DNS configuration profile.</p>
         <a href="https://github.com/ESign-khoindvn/ESign-Khoindvn.github.io/raw/refs/heads/main/Tool/khoindns.mobileconfig"
            class="install-btn circle"
            target="_blank"
@@ -18,7 +20,7 @@
         </a>
     </div>
 
-    <div class="container cert-list">
+    <div class="container cert-list glass">
         <h2>Install Certificates</h2>
         <ul>
             <li>
